kubernetes/idsmDebugger.prod.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idsm-debugger-prod
  namespace: sparql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idsm-debugger-prod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: idsm-debugger-prod
    spec:
      securityContext: # Pod security context
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: idsm-debugger-prod
          image: registry.gitlab.com/marekmoosuochb/testrepo/idsmdebugger:77
          securityContext: # Container security context
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "2"
              memory: "8Gi"
            limits:
              cpu: "2"
              memory: "8Gi"


---

apiVersion: v1
kind: Service
metadata:
  name: idsm-debugger-prod
  namespace: sparql
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: idsm-debugger-prod
