kubernetes/idsmDebugger.ingress_test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idsm-debugger-ingress-test2
  namespace: sparql
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - "idsm-debugger-test2.dyn.cloud.e-infra.cz"
      secretName: idsm-debugger-test2-dyn-cloud-e-infra-cz-tls
  rules:
    - host: "idsm-debugger-test2.dyn.cloud.e-infra.cz"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: idsm-debugger
                port:
                  number: 80
